# algorithmic_trading

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py
app/data_preprocessing/: data_loader.py  data_preprocessor.py  process_data.py
app/feature_engineering/: build_labels.py  labeling.py
app/utils/: tools.py
scripts/: fetch_data.py
tests/app/data_preprocessing/: test_data_preprocessor.py
tests/app/utils/: test_tools.py
