[project]
name = "algorithmic-trading-pipeline-and-model"
version = "0.1.0"
description = "Algorithmic trading data pipeline (using FinanceToolkit) and model."
authors = [
    {name = "Mateusz Grzyb",email = "mwgrzyb@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pyxirr (>=0.10.7,<0.11.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "financetoolkit (>=2.0.4,<3.0.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "mapie (>=1.2.0,<2.0.0)",
    "shap (>=0.50.0,<0.51.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "shap-select (>=0.1.2,<0.2.0)",
    "scikit-learn-intelex (>=2025.10.0,<2026.0.0)",
]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.17.1"
